<resources>
    <string name="app_name">SiegeCompanionApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_highlightreel">Highlight reel</string>
    <string name="menu_settings">Settings</string>

    <string name="quick_links">Quick Links</string>
    <string name="search_by_tag">Search by tag</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit_tip_header">Submit a tip</string>
    <string name="header_title_string">Title</string>
    <string name="enter_post_title_here">Enter post title here</string>
    <string name="content_header_string">Content</string>
    <string name="enter_post_content_here">Enter post content here</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="user_not_found">Siege username not found. Please update username in settings.</string>

    <string name="player_stats_rank">Rank | %s</string>
    <string name="player_stats_name">%s\'s Stats</string>
    <string name="player_stats_level">Level | %s</string>
    <string name="player_stats_mmr">Ranked MMR | %s</string>
    <string name="player_stats_kd">Ranked KD | %s</string>

    <string name="settings_username">Siege Username: %s</string>
    <string name="change_siege_username">Change Siege username</string>
    <string name="stats">Stats</string>
    <string name="tag_header_string">Tags</string>
    <string name="tag_hint_string">ex: Ash, Sledge, etc.</string>
    <string name="upload_file">Upload file</string>
    <string name="highlight_reel">Highlight Reel</string>

</resources>
