<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <item android:title="Pages">
        <menu>
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_search_black_24dp"
                android:title="@string/menu_search" />
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/menu_home"
                />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_highlightreel" />
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />
        </menu>
    </item>



</menu>
