<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_gallery"
        android:name="edu.rosehulman.collinjw.siegecompanionapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_search" />

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.rosehulman.collinjw.siegecompanionapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_page" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="edu.rosehulman.collinjw.siegecompanionapp.PostListFragment"
        android:label="@string/menu_highlightreel"
        tools:layout="@layout/fragment_post_list" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="edu.rosehulman.collinjw.siegecompanionapp.ui.tools.ToolsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_tools" />

</navigation>